--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Voice Recognition</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
   </head>
   <style>
     .main {
@@ -17,17 +23,32 @@
       text-align: center;
       font-size: 30px;
     }
+    #answer {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      padding: 15px 0 0 0;
+      font-size: 40px;
+      text-align: center;
+    }
   </style>
   <body>
     <div class="main">
-      <button id="talk">Click Me To Start</button>
+      <button class="btn btn-primary p-2 m-5" id="talk">
+        Click Me To Start
+      </button>
     </div>
-    <h3 id="content"></h3>
+    <h3 class="fs-1" id="content"></h3>
+    <h1 class="display-1" id="answer"></h1>
     <script>
       const btn = document.getElementById("talk");
       const content = document.getElementById("content");
+      const answer = document.getElementById("answer");
 
-      const greetings = ["My Name is Tanha"];
+      const greetings = ["My Name is i Voice"];
+      const developer = [
+        "Umme Sadeka is my developer, she is a most clever and determine developer i have ever seen, she is Queen",
+      ];
+      const version = ["I'm 2.0.2"];
 
       const weather = ["Weather is fine", "you need a tan"];
 
@@ -54,11 +75,21 @@
       function readOutLoud(message) {
         const speech = new SpeechSynthesisUtterance();
 
-        speech.text = "i dont know";
+        speech.text = "Sorry! I don't know";
+        answer.textContent = speech.text;
         if (message.includes("what's your name")) {
-          const finalText =
+          var finalText =
             greetings[Math.floor(Math.random() * greetings.length)];
           speech.text = finalText;
+          answer.textContent = finalText;
+        } else if (message.includes("who is your developer")) {
+          finalText = developer[Math.floor(Math.random() * developer.length)];
+          speech.text = finalText;
+          answer.textContent = finalText;
+        } else if (message.includes("what is your version")) {
+          finalText = version[Math.floor(Math.random() * version.length)];
+          speech.text = finalText;
+          answer.textContent = finalText;
         }
 
         speech.volume = 1;
